# lang_parsing_substrate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  about.hbs  tasks.py
.github/workflows/: build.yml
docs/: migration-knots.md  migration-tools_sqc.md  research-c-standard-detection.md  unified-config-spec.md
src/: c_standard.rs  calls.rs  cfg.rs  cpp_header.rs  fingerprint.rs  imports.rs  lib.rs  path_ignore.rs  query.rs  regions.rs  registry.rs  suppressions.rs
tests/: smoke.rs
